bk_ida/gobmkida/g3/do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1084:7: error: use of undeclared identifier 'unk_A6E570'
v6 = &unk_A6E570; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1153:7: error: use of undeclared identifier 'worms_2'
v24 = worms_2[0][v20 + v21]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1157:1: error: use of undeclared identifier 'worms_2'
worms_2[v17][v22] = v24; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1163:9: error: use of undeclared identifier 'worms_2'
while ( worms_2[0][v23 + v11] != worms_2[0][v20 + v21] ) 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1163:34: error: use of undeclared identifier 'worms_2'
while ( worms_2[0][v23 + v11] != worms_2[0][v20 + v21] ) 
                                 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1200:7: error: use of undeclared identifier 'worms_2'; did you mean 'nworms'?
v36 = worms_2[v32 / 0x24]; 
      ^~~~~~~
      nworms
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1080:5: note: 'nworms' declared here
int nworms[400]; // [rsp+690h] [rbp-678h] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1206:17: error: use of undeclared identifier 'dword_A6D9A4'
while ( v36 != &dword_A6D9A4[v31 + ( unsigned int)( v35 - 1)] ); 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1213:7: error: use of undeclared identifier 'worms_2'
v41 = worms_2[0][v40++ + v32]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1251:8: error: use of undeclared identifier 'worms_2'
*v28 = worms_2[v25 / 0x24][0]; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1254:10: error: use of undeclared identifier 'dword_A6D9A4'
v28[1] = dword_A6D9A4[v25]; 
         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1257:10: error: use of undeclared identifier 'dword_A6D9A8'
v28[2] = dword_A6D9A8[v25]; 
         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1260:10: error: use of undeclared identifier 'dword_A6D9AC'
v28[3] = dword_A6D9AC[v25]; 
         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1263:10: error: use of undeclared identifier 'dword_A6D9B0'
v28[4] = dword_A6D9B0[v25]; 
         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/engine/worm.c:1269:12: error: use of undeclared identifier 'worms_2'
v28[v30] = worms_2[0][v30 + v25]; 
           ^
14 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/do_compute_effective_worm_sizes/src/obj/1/worm.o] Error 1
